--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -1,6 +1,6 @@
 ####################### Banner #########################
 banner:
-  title : "create your place online. get support from real humans."
+  title : "create your presence online. get digital support from real humans."
   image : "custom.svg"
   copyright : "honey, the image hasn't loaded yet!"
   button:
